--- a/app/src/main/res/layout/activity_lista_tableros.xml
+++ b/app/src/main/res/layout/activity_lista_tableros.xml
@@ -5,7 +5,52 @@
     android:id="@+id/coordinatorLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Tablero.ListaTableros">
+    tools:context=".Tablero.TableroActivity">
+
+    <ImageButton
+
+        android:id="@+id/returnBt2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="75dp"
+
+        android:background="@null"
+        android:onClick="returnOnClick"
+        android:scaleType="fitXY"
+        app:layout_constraintEnd_toStartOf="@+id/subtemaTxt"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_before" />
+
+    <TextView
+        android:id="@+id/subtemaTxt"
+        android:layout_width="162dp"
+        android:layout_height="18dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="73dp"
+        android:autoSizeTextType="uniform"
+        android:autoText="false"
+        android:isScrollContainer="true"
+        android:scrollbars="horizontal"
+        android:scrollHorizontally="true"
+
+        android:textAlignment="center"
+        android:textSize="28dp"
+        app:layout_constraintEnd_toStartOf="@+id/nuevoTablero"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageButton
+        android:id="@+id/nuevoTablero"
+        android:layout_width="36dp"
+        android:layout_height="24dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+
+        android:background="@null"
+        android:scaleType="fitXY"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_create_new_folder" />
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayout"
@@ -15,21 +60,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
-
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/tableros"
         android:layout_width="409dp"
         android:layout_height="674dp"
+        android:layout_marginTop="56dp"
         android:layout_marginEnd="2dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />
 
