--- a/app/src/main/res/layout/activity_datos_tarea.xml
+++ b/app/src/main/res/layout/activity_datos_tarea.xml
@@ -24,7 +24,7 @@
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="81dp"
                 android:autoSizeTextType="uniform"
-                android:text="Datos de la asignatura"
+                android:text="Datos de la tarea"
                 android:textColor="#000000"
                 android:textSize="28dp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -37,7 +37,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="95dp"
                 android:layout_marginEnd="95dp"
-                android:text="Nombre de la asignatura"
+                android:text="Nombre de la tarea"
                 android:textColor="#D94A77"
                 android:textSize="20sp"
                 app:layout_constraintBottom_toTopOf="@+id/nombreTxt"
@@ -49,7 +49,7 @@
                 android:layout_width="237dp"
                 android:layout_height="40dp"
                 android:layout_marginStart="95dp"
-                android:layout_marginTop="80dp"
+                android:layout_marginTop="150dp"
                 android:layout_marginEnd="95dp"
                 android:textAlignment="center"
                 android:textSize="18dp"
@@ -58,43 +58,17 @@
                 app:layout_constraintTop_toBottomOf="@+id/nombreAsginaturaTxt" />
 
             <TextView
-                android:id="@+id/textView6"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="95dp"
-                android:layout_marginEnd="95dp"
-                android:text="Numero de subtemas"
-                android:textColor="#D94A77"
-                android:textSize="20sp"
-                app:layout_constraintBottom_toTopOf="@+id/numSubTxt"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
-
-            <TextView
                 android:id="@+id/textView12"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="95dp"
                 android:layout_marginEnd="95dp"
-                android:text="Creditos de la asignatura"
+                android:text="Estado de la tarea"
                 android:textColor="#D94A77"
                 android:textSize="20sp"
-                app:layout_constraintBottom_toTopOf="@+id/CreditosTxt"
+                app:layout_constraintBottom_toTopOf="@+id/estadoSpinner"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
-
-            <EditText
-                android:id="@+id/CreditosTxt"
-                android:layout_width="237dp"
-                android:layout_height="40dp"
-                android:layout_marginStart="95dp"
-                android:layout_marginTop="70dp"
-                android:layout_marginEnd="95dp"
-                android:textAlignment="center"
-                android:textSize="18dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/nombreTxt" />
 
             <Button
                 android:id="@+id/validarBt"
@@ -109,7 +83,7 @@
                 android:textColor="#ffffff"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/numSubTxt" />
+                app:layout_constraintTop_toBottomOf="@+id/estadoSpinner" />
 
             <ImageButton
 
@@ -126,18 +100,16 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/ic_before" />
 
-            <TextView
-                android:id="@+id/numSubTxt"
+            <Spinner
+                android:id="@+id/estadoSpinner"
                 android:layout_width="237dp"
-                android:layout_height="40dp"
-                android:layout_marginStart="95dp"
-                android:layout_marginTop="70dp"
-                android:layout_marginEnd="95dp"
-                android:textAlignment="center"
-                android:textSize="20sp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="88dp"
+                android:layout_marginTop="100dp"
+                android:layout_marginEnd="87dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/CreditosTxt" />
+                app:layout_constraintTop_toBottomOf="@+id/nombreTxt" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
